Table menus {
  id int [pk]
  name text [not null]
  description text
  is_available bool
}

Table menu_variations {
  id int [pk]
  menu_id int
  type text [note: "hot,ice,frappe"]
  price number
}

Table menu_price_logs {
  id int [pk]
  menu_variation_id int
  price number
  created_at timestamp
}

Table members {
  id int [pk]
  phone_number text
  provider text [note: "line"]
  profile text [note: "encrypt"]
  created_at timestamp
  updated_at timestamp
}


Ref: menu_variations.menu_id > menus.id
Ref: menu_price_logs.menu_variation_id > menu_variations.id
